# cinematch

./: .gitignore  README.md  docker-compose.yml
cinematch/: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  ai_chat.py  app.py  config.py  embeddings.py  ingest.py  main.py  pyproject.toml  rag.py  requirements.txt  search.py  taste_profile.py  test_gemini.py
docs/: ENDEE_INTEGRATION.md  SETUP.md  SYSTEM_DESIGN.md
